Antipenultimate fixes of the 'sign up' box with some issues remaining

--- a/index.html
+++ b/index.html
@@ -33,24 +33,33 @@
             </div>
     </div>
 
-    <div id="third">Some random information.
+    <table id="third">
+        <tr><th colspan="4">Some random information.</th></tr>
+        <tr><td class="img1" scope="col">1</td>
+        <td class="img2" scope="col">2</td>
+        <td class="img3" scope="col">3</td>
+        <td class="img4" scope="col">4</td></tr>
+        <tr><td>This is some subtext under an illustration or image</td>
+        <td>This is some subtext under an illustration or image</td>
+        <td>This is some subtext under an illustration or image</td>
+        <td>This is some subtext under an illustration or image</td></tr>
+    </table>
 
-        <p>This is some subtext under an illustration or image</p>
-        <p>This is some subtext under an illustration or image</p>
-        <p>This is some subtext under an illustration or image</p>
-        <p>This is some subtext under an illustration or image</p>
-    </div>
 
-
-    <div id="fourth">This is an inspiring quote or maybe just a testamonial for a customer. Lorem ipsum dolor sit amet
-        consectetur, similique quae? Quam!
+    <div id="fourth">
+        <div>This is an inspiring quote or maybe just a testamonial for a customer. Lorem ipsum dolor sit amet
+        consectetur, similique quae? Quam!</div>
         <p class="quote">-Hades, God of the Underworld</p>
     </div>
-
-    <div id="fifth">Call to action! It's time!
-        Sign up for our product by clicking that button over there.
-        <a class="signup" href="https://www.google.com">Sign up</a>
+<div id="cta-container">
+    <div id="fifth">
+        <div class="call">Call to action! It's time!
+        <p class="call">Sign up for our product by clicking that button over there.</p>
+        </div>
+        <div class="argh"><a class="signup" href="https://www.google.com">Sign up</a>
+        </div>
     </div>
+</div>
 
         <div id="footer">Copyright (c) The Odin Project 2022
         </div>
